docs(00-setup-modern-java): TR/EN lesson and exercise docs with PDFs (M00.c)
- setup and verification (JDK 27, Maven wrapper, Docker, IDE), repository
  and exercise workflow, Java 21→27 feature table with verified JEPs
  (incl. JEP 533 structured concurrency 7th preview, JEP 523, JEP 534)
- ten example sections with snippets synced from tagged source
- exercise sheets for the 3 exercises plus a structured-concurrency bonus
- check-module: placeholder rule only matches {{UPPER_CASE}} tokens, so
  Go-template strings like docker --format '{{.ServerVersion}}' pass

Closes #13

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>